--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
       <img class="profilepic" alt="LinkedIn Profile Picture" src="https://media-exp1.licdn.com/dms/image/C5603AQHtfSzGxoMnoQ/profile-displayphoto-shrink_200_200/0?e=1599091200&v=beta&t=oHFMFikAG49re2xUJKE8XyWbZTqph8YZn2j4UKjAx-8">
     </div>
     <div class="topnav">
-      <a href="C:\Users\Ivar\Desktop\website\index.html">Home</a>
-      <a href="C:\Users\Ivar\Desktop\website\projects.html">Projects</a>
-      <a href="C:\Users\Ivar\Desktop\website\documents.html">Documents</a>
-      <a href="C:\Users\Ivar\Desktop\website\contact.html">Contact</a>
+      <a href="https://ibogley.github.io/website/index.html">Home</a>
+      <a href="https://ibogley.github.io/website/projects.html">Projects</a>
+      <a href="https://ibogley.github.io/website/documents.html">Documents</a>
+      <a href="https://ibogley.github.io/website/contact.html">Contact</a>
     </div>
   </head>
   <body>
