added contact info

--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,10 @@
     </div>
   </head>
   <body>
-    <iframe src="https://github.com/ibogley/Code-Portfolio/blob/master/resume.pdf"></iframe>
+    Ian Oliver Michalik Bogley
+    Graduate Student, University of Oregon
+    Applied Economics
+    <a href="mailto: ibogley@uoregon.edu">ibogley@uoregon.edu</a>
+    541-829-2116
   </body>
 </html>
