--- a/documents.html
+++ b/documents.html
@@ -13,6 +13,7 @@
     </div>
   </head>
   <body>
-    <iframe src="https://github.com/ibogley/Code-Portfolio/blob/master/resume.pdf"></iframe>
+    <iframe src="https://ibogley.github.io/website/documents/resume.pdf"></iframe>
+    <iframe src="https://ibogley.github.io/website/documents/transcript.pdf"></iframe>
   </body>
 </html>
