--- a/projects.html
+++ b/projects.html
@@ -13,6 +13,6 @@
     </div>
   </head>
   <body>
-
+    <iframe src="https://ibogley.github.io/website/projects/election/us_pres_prj_final.md"></iframe>
   </body>
 </html>
