Reformatted the documents page

--- a/documents.html
+++ b/documents.html
@@ -13,7 +13,10 @@
     </div>
   </head>
   <body>
+    <h2>Resume</h2>
     <iframe src="https://ibogley.github.io/website/documents/resume.pdf"></iframe>
+    <br>
+    <h2>Transcript</h2>
     <iframe src="https://ibogley.github.io/website/documents/transcript.pdf"></iframe>
   </body>
 </html>
