--- a/projects.html
+++ b/projects.html
@@ -13,6 +13,12 @@
     </div>
   </head>
   <body>
-    <iframe src="https://ibogley.github.io/website/projects/election/us_pres_prj_final.md"></iframe>
+    Below you'll find various projects I've completed in school, a professional setting, or my within my personal queries. As time goes on this list will grow in size and quality, and I look forward to adding more of my work to this page.
+    <ul>
+      <li>ARIMA Forecast</li>
+      <li>Case Study: Modern changes in the global retail market</li>
+      <li>Election Animation</li>
+      <li>Employee Satisfaction Survey Work</li>
+    </ul>
   </body>
 </html>
