Worked on html pages, transferred bio to its own page, instead of index.html

--- a/contact.html
+++ b/contact.html
@@ -9,10 +9,13 @@
       <a href="https://ibogley.github.io/website/index.html">Home</a>
       <a href="https://ibogley.github.io/website/projects.html">Projects</a>
       <a href="https://ibogley.github.io/website/documents.html">Documents</a>
+      <a href="https://ibogley.github.io/website/bio.html">Biography</a>
       <a href="https://ibogley.github.io/website/contact.html">Contact</a>
     </div>
   </head>
   <body>
+    <title>Contact Me</title>
+    I look forward to your inquries. Please feel free to contact me with anything from professional opportunities to advice on how to improve my work.
     Ian Oliver Michalik Bogley
     Graduate Student, University of Oregon
     Applied Economics
