--- a/projects.html
+++ b/projects.html
@@ -9,16 +9,18 @@
       <a href="https://ibogley.github.io/website/index.html">Home</a>
       <a href="https://ibogley.github.io/website/projects.html">Projects</a>
       <a href="https://ibogley.github.io/website/documents.html">Documents</a>
+      <a href="https://ibogley.github.io/website/bio.html">Biography</a>
       <a href="https://ibogley.github.io/website/contact.html">Contact</a>
     </div>
   </head>
   <body>
+    <title>Portfolio Projects</title>
     Below you'll find various projects I've completed in school, a professional setting, or my within my personal queries. As time goes on this list will grow in size and quality, and I look forward to adding more of my work to this page.
     <ul>
-      <li>ARIMA Forecast</li>
-      <li>Case Study: Modern changes in the global retail market</li>
-      <li>Election Animation</li>
-      <li>Employee Satisfaction Survey Work</li>
+      <li>ARIMA Forecast <a href="https://github.com/ibogley/Code-Portfolio/blob/master/arima/arima_forecast.md">Github Document</a></li>
+      <li>Case Study: Modern changes in the global retail market <a href="https://github.com/ibogley/Code-Portfolio/raw/master/case_study/case_study.docx">Word Document</a></li>
+      <li>Election Animation <a href="https://github.com/ibogley/Code-Portfolio/blob/master/election/us_pres_prj_final.md">Github Document</a></li>
+      <li>Employee Satisfaction Survey Work <a href="https://github.com/ibogley/Code-Portfolio/raw/master/survey/survey_2020.docx">Word Document</a></li>
     </ul>
   </body>
 </html>
