--- a/documents.html
+++ b/documents.html
@@ -9,6 +9,7 @@
       <a href="https://ibogley.github.io/website/index.html">Home</a>
       <a href="https://ibogley.github.io/website/projects.html">Projects</a>
       <a href="https://ibogley.github.io/website/documents.html">Documents</a>
+      <a href="https://ibogley.github.io/website/bio.html">Biography</a>
       <a href="https://ibogley.github.io/website/contact.html">Contact</a>
     </div>
   </head>
