worked on all the pages, especially the bio

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <link rel="stylesheet" type="text/css" href="site.css">
+  <title>Homepage</title>
   <head>
     <div class="topbanner">
       <img class="profilepic" alt="LinkedIn Profile Picture" src="https://media-exp1.licdn.com/dms/image/C5603AQHtfSzGxoMnoQ/profile-displayphoto-shrink_200_200/0?e=1599091200&v=beta&t=oHFMFikAG49re2xUJKE8XyWbZTqph8YZn2j4UKjAx-8">
@@ -14,11 +15,8 @@
     </div>
   </head>
   <body>
-    <title>Homepage</title>
-    <h2>Contents</h2>
-    <ul>Biography</ul>
-    <ul>My Projects</ul>
-    <ul>My Documents</ul>
-    <ul>Contact Me</ul>
+    Hello, my name is Ian. I graduated from the University of Oregon in 2020 and am now pursuing a Master's in Applied Economics from the same institution. Check out my bio for more information on where I grew up, my previous personal exploits, etc.
+    <br>
+    I made this page with the intent of creating an online presence. This site is meant to be a representitive of my professional career and aspirations. Currently, I take inspiration from several of the teachers I've worked with here at the U of O, guiding me toward the opportunity to work in the data science industry.  
   </body>
 </html>
