--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <link rel="stylesheet" type="text/css" href="site.css">
+  <title>Contact</title>
   <head>
     <div class="topbanner">
       <img class="profilepic" alt="LinkedIn Profile Picture" src="https://media-exp1.licdn.com/dms/image/C5603AQHtfSzGxoMnoQ/profile-displayphoto-shrink_200_200/0?e=1599091200&v=beta&t=oHFMFikAG49re2xUJKE8XyWbZTqph8YZn2j4UKjAx-8">
@@ -14,12 +15,18 @@
     </div>
   </head>
   <body>
-    <title>Contact Me</title>
-    I look forward to your inquries. Please feel free to contact me with anything from professional opportunities to advice on how to improve my work.
-    Ian Oliver Michalik Bogley
-    Graduate Student, University of Oregon
-    Applied Economics
-    <a href="mailto: ibogley@uoregon.edu">ibogley@uoregon.edu</a>
-    541-829-2116
+    <div class="contact">
+      I look forward to your inquries. Please feel free to contact me with anything from professional opportunities to advice on how to improve my work.
+      <br>
+      Ian Oliver Michalik Bogley
+      <br>
+      Graduate Student, University of Oregon
+      <br>
+      Applied Economics
+      <br>
+      <a href="mailto: ibogley@uoregon.edu">ibogley@uoregon.edu</a>
+      <br>
+      541-829-2116
+    </div>
   </body>
 </html>
