centered share buttons

--- a/index.html
+++ b/index.html
@@ -20,48 +20,48 @@
     </p>
     <br>
     <p>
-      I made this page with the intent of creating an online presence. This site is meant to be a representitive of my professional career and aspirations. Currently, I take inspiration from several of the teachers I've worked with here at the U of O, guiding me toward the opportunity to work in the data science industry.  
+      I made this page with the intent of creating an online presence. This site is meant to be a representitive of my professional career and aspirations. Currently, I take inspiration from several of the teachers I've worked with here at the U of O, guiding me toward the opportunity to work in the data science industry.
     </p>
   </body>
   <footer>
         <!-- I got these buttons from simplesharebuttons.com -->
-    <div id="share-buttons">
+    <div class="share-buttons">
       <div class="button">
         <!-- Email -->
-        <a href="mailto:?Subject=Simple Share Buttons&amp;Body=I%20saw%20this%20and%20thought%20of%20you!%20 https://simplesharebuttons.com">
+        <a href="mailto:?Subject=Simple Share Buttons&amp;Body=I%20saw%20this%20and%20thought%20of%20you!%20 https://ibogley.github.io/website/index.html">
             <img src="https://simplesharebuttons.com/images/somacro/email.png" alt="Email" />
         </a>
       </div>
-    <div class="button">
-        <!-- Facebook -->
-        <a href="http://www.facebook.com/sharer.php?u=https://simplesharebuttons.com" target="_blank">
-            <img src="https://simplesharebuttons.com/images/somacro/facebook.png" alt="Facebook" />
-        </a>
-    </div>
-    <div class="button">
-        <!-- LinkedIn -->
-        <a href="http://www.linkedin.com/shareArticle?mini=true&amp;url=https://simplesharebuttons.com" target="_blank">
-            <img src="https://simplesharebuttons.com/images/somacro/linkedin.png" alt="LinkedIn" />
-        </a>
-    </div>
-    <div class="button">
-        <!-- Reddit -->
-        <a href="http://reddit.com/submit?url=https://simplesharebuttons.com&amp;title=Simple Share Buttons" target="_blank">
-            <img src="https://simplesharebuttons.com/images/somacro/reddit.png" alt="Reddit" />
-        </a>
-    </div>
-    <div class="button">
-        <!-- Twitter -->
-        <a href="https://twitter.com/share?url=https://simplesharebuttons.com&amp;text=Simple%20Share%20Buttons&amp;hashtags=simplesharebuttons" target="_blank">
-            <img src="https://simplesharebuttons.com/images/somacro/twitter.png" alt="Twitter" />
-        </a>
-    </div>
-    <div class="button">
-        <!-- Print -->
-        <a href="javascript:;" onclick="window.print()">
-            <img src="https://simplesharebuttons.com/images/somacro/print.png" alt="Print" />
-        </a>
-    </div>
+      <div class="button">
+          <!-- Facebook -->
+          <a href="http://www.facebook.com/sharer.php?u=https://ibogley.github.io/website/index.html" target="_blank">
+              <img src="https://simplesharebuttons.com/images/somacro/facebook.png" alt="Facebook" />
+          </a>
+      </div>
+      <div class="button">
+          <!-- LinkedIn -->
+          <a href="http://www.linkedin.com/shareArticle?mini=true&amp;url=https://ibogley.github.io/website/index.html" target="_blank">
+              <img src="https://simplesharebuttons.com/images/somacro/linkedin.png" alt="LinkedIn" />
+          </a>
+      </div>
+      <div class="button">
+          <!-- Reddit -->
+          <a href="http://reddit.com/submit?url=https://simplesharebuttons.com&amp;title=Simple Share Buttons" target="_blank">
+              <img src="https://simplesharebuttons.com/images/somacro/reddit.png" alt="Reddit" />
+          </a>
+      </div>
+      <div class="button">
+          <!-- Twitter -->
+          <a href="https://twitter.com/share?url=https://ibogley.github.io/website/index.html" target="_blank">
+              <img src="https://simplesharebuttons.com/images/somacro/twitter.png" alt="Twitter" />
+          </a>
+      </div>
+      <div class="button">
+          <!-- Print -->
+          <a href="javascript:;" onclick="window.print()">
+              <img src="https://simplesharebuttons.com/images/somacro/print.png" alt="Print" />
+          </a>
+      </div>
     </div>
   </footer>
 </html>
