Worked on margins, fonts

--- a/contact.html
+++ b/contact.html
@@ -16,17 +16,19 @@
   </head>
   <body>
     <div class="contact">
-      I look forward to your inquries. Please feel free to contact me with anything from professional opportunities to advice on how to improve my work.
-      <br>
+      <p>
       Ian Oliver Michalik Bogley
       <br>
       Graduate Student, University of Oregon
       <br>
       Applied Economics
       <br>
+      <a href="https://www.linkedin.com/in/ian-bogley-857088196/">LinkedIn Profile</a>
+      <br>
       <a href="mailto: ibogley@uoregon.edu">ibogley@uoregon.edu</a>
       <br>
       541-829-2116
+      </p>
     </div>
   </body>
   <footer>
