--- a/projects.html
+++ b/projects.html
@@ -2,6 +2,7 @@
 <html>
   <link rel="stylesheet" type="text/css" href="site.css">
   <head>
+    <title>Projects</title>
     <div class="topbanner">
       <img class="profilepic" alt="LinkedIn Profile Picture" src="https://media-exp1.licdn.com/dms/image/C5603AQHtfSzGxoMnoQ/profile-displayphoto-shrink_200_200/0?e=1599091200&v=beta&t=oHFMFikAG49re2xUJKE8XyWbZTqph8YZn2j4UKjAx-8">
     </div>
@@ -14,8 +15,9 @@
     </div>
   </head>
   <body>
-    <title>Portfolio Projects</title>
-    Below you'll find various projects I've completed in school, a professional setting, or my within my personal queries. As time goes on this list will grow in size and quality, and I look forward to adding more of my work to this page.
+    <p>
+      Below you'll find various projects I've completed in school, a professional setting, or my within my personal queries. As time goes on this list will grow in size and quality, and I look forward to adding more of my work to this page.
+    </p>
     <ul>
       <li>ARIMA Forecast <a href="https://github.com/ibogley/Code-Portfolio/blob/master/arima/arima_forecast.md">Github Document</a></li>
       <li>Case Study: Modern changes in the global retail market <a href="https://github.com/ibogley/Code-Portfolio/raw/master/case_study/case_study.docx">Word Document</a></li>
