--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       Hello, my name is Ian. I graduated from the University of Oregon in 2020 majoring in Economics while minoring in mathematics and business administration. Now, I am now pursuing a Master's in Applied Economics from the same institution. Check out my bio for more information on where I grew up, my previous personal exploits, etc.
     </p>
     <p>
-      I made this page with the intent of creating an online presence. This site is meant to be a representitive of my professional career and aspirations. Currently, I take inspiration from several of the teachers I've worked with here at the U of O, guiding me toward the opportunity to work in the data science industry.
+      I made this page with the intent of creating an online presence. This site is meant to be a representitive of my professional career and aspirations. Currently, I'm looking for an opportunity to work in data science.
     </p>
   </body>
   <footer>
