--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <p>
-      Hello, my name is Ian. I graduated from the University of Oregon in 2020 majoring in Economics while minoring in mathematics and business administration. Now, I am now pursuing a Master's in Applied Economics from the same institution. Check out my bio for more information on where I grew up, my previous personal exploits, etc.
+      Hello, my name is Ian. I graduated from the University of Oregon in 2020 majoring in Economics while minoring in mathematics and business administration. As of september 2020, I will be pursuing a Master's in Applied Economics from the same institution. Check out my bio for more information on where I grew up, my previous personal exploits, etc.
     </p>
     <p>
       I made this page with the intent of creating an online presence. This site is meant to be a representitive of my professional career and aspirations. Currently, I'm looking for an opportunity to work in data science.
