Put contact info on sidebar of each page instead of in its own page.

--- a/documents.html
+++ b/documents.html
@@ -11,15 +11,35 @@
       <a href="https://ibogley.github.io/website/projects.html">Projects</a>
       <a href="https://ibogley.github.io/website/documents.html">Documents</a>
       <a href="https://ibogley.github.io/website/bio.html">Biography</a>
-      <a href="https://ibogley.github.io/website/contact.html">Contact</a>
     </div>
   </head>
   <body>
-    <h2 style="text-align:center">Resume</h2>
-    <iframe src="https://ibogley.github.io/website/documents/resume.pdf"></iframe>
-    <br>
-    <h2 style="text-align:center">Transcript</h2>
-    <iframe src="https://ibogley.github.io/website/documents/transcript.pdf"></iframe>
+    <div class="content">
+        <div class="side">
+          <p>
+          Ian Bogley
+          <br>
+          Graduate Student
+          <br>
+          University of Oregon
+          <br>
+          Applied Economics
+          <br>
+          <a href="https://www.linkedin.com/in/ian-bogley-857088196/">LinkedIn Profile</a>
+          <br>
+          <a href="mailto: ibogley@uoregon.edu">ibogley@uoregon.edu</a>
+          <br>
+          541-829-2116
+          </p>
+        </div>
+        <div class="main">
+          <h2 style="text-align:center">Resume</h2>
+          <iframe src="https://ibogley.github.io/website/documents/resume.pdf"></iframe>
+          <br>
+          <h2 style="text-align:center">Transcript</h2>
+          <iframe src="https://ibogley.github.io/website/documents/transcript.pdf"></iframe>
+        </div>
+      </div>
   </body>
   <footer>
         <!-- I got these buttons from simplesharebuttons.com -->
