--- a/index.html
+++ b/index.html
@@ -11,16 +11,36 @@
       <a href="https://ibogley.github.io/website/projects.html">Projects</a>
       <a href="https://ibogley.github.io/website/documents.html">Documents</a>
       <a href="https://ibogley.github.io/website/bio.html">Biography</a>
-      <a href="https://ibogley.github.io/website/contact.html">Contact</a>
     </div>
   </head>
   <body>
-    <p>
-      Hello, my name is Ian. I graduated from the University of Oregon in 2020 majoring in Economics while minoring in mathematics and business administration. As of september 2020, I will be pursuing a Master's in Applied Economics from the same institution. Check out my bio for more information on where I grew up, my previous personal exploits, etc.
-    </p>
-    <p>
-      I made this page with the intent of creating an online presence. This site is meant to be a representitive of my professional career and aspirations. Currently, I'm looking for an opportunity to work in data science.
-    </p>
+    <div class="content">
+        <div class="side">
+          <p>
+          Ian Bogley
+          <br>
+          Graduate Student
+          <br>
+          University of Oregon
+          <br>
+          Applied Economics
+          <br>
+          <a href="https://www.linkedin.com/in/ian-bogley-857088196/">LinkedIn Profile</a>
+          <br>
+          <a href="mailto: ibogley@uoregon.edu">ibogley@uoregon.edu</a>
+          <br>
+          541-829-2116
+          </p>
+        </div>
+        <div class="main">
+          <p>
+            Hello, my name is Ian. I graduated from the University of Oregon in 2020 majoring in Economics while minoring in mathematics and business administration. As of september 2020, I will be pursuing a Master's in Applied Economics from the same institution. Check out my bio for more information on where I grew up, my previous personal exploits, etc.
+          </p>
+          <p>
+            I made this page with the intent of creating an online presence. This site is meant to be a representitive of my professional career and aspirations. Currently, I'm looking for an opportunity to work in data science.
+          </p>
+        </div>
+    </div>
   </body>
   <footer>
         <!-- I got these buttons from simplesharebuttons.com -->
