--- a/projects.html
+++ b/projects.html
@@ -11,19 +11,39 @@
       <a href="https://ibogley.github.io/website/projects.html">Projects</a>
       <a href="https://ibogley.github.io/website/documents.html">Documents</a>
       <a href="https://ibogley.github.io/website/bio.html">Biography</a>
-      <a href="https://ibogley.github.io/website/contact.html">Contact</a>
     </div>
   </head>
   <body>
-    <p>
-      Below you'll find various projects I've completed in school, a professional setting, or my within my personal queries. As time goes on this list will grow in size and quality, and I look forward to adding more of my work to this page.
-    </p>
-    <ul>
-      <li>ARIMA Forecast <a href="https://github.com/ibogley/Code-Portfolio/blob/master/arima/arima_forecast.md">Github Document</a></li>
-      <li>Case Study: Modern changes in the global retail market <a href="https://github.com/ibogley/Code-Portfolio/raw/master/case_study/case_study.docx">Word Document</a></li>
-      <li>Election Animation <a href="https://github.com/ibogley/Code-Portfolio/blob/master/election/us_pres_prj_final.md">Github Document</a></li>
-      <li>Employee Satisfaction Survey Work <a href="https://github.com/ibogley/Code-Portfolio/raw/master/survey/survey_2020.docx">Word Document</a></li>
-    </ul>
+    <div class="content">
+        <div class="side">
+          <p>
+          Ian Bogley
+          <br>
+          Graduate Student
+          <br>
+          University of Oregon
+          <br>
+          Applied Economics
+          <br>
+          <a href="https://www.linkedin.com/in/ian-bogley-857088196/">LinkedIn Profile</a>
+          <br>
+          <a href="mailto: ibogley@uoregon.edu">ibogley@uoregon.edu</a>
+          <br>
+          541-829-2116
+          </p>
+        </div>
+        <div class="main">
+          <p>
+            Below you'll find various projects I've completed in school, a professional setting, or my within my personal queries. As time goes on this list will grow in size and quality, and I look forward to adding more of my work to this page.
+          </p>
+          <ul>
+            <li>ARIMA Forecast <a href="https://github.com/ibogley/Code-Portfolio/blob/master/arima/arima_forecast.md">Github Document</a></li>
+            <li>Case Study: Modern changes in the global retail market <a href="https://github.com/ibogley/Code-Portfolio/raw/master/case_study/case_study.docx">Word Document</a></li>
+            <li>Election Animation <a href="https://github.com/ibogley/Code-Portfolio/blob/master/election/us_pres_prj_final.md">Github Document</a></li>
+            <li>Employee Satisfaction Survey Work <a href="https://github.com/ibogley/Code-Portfolio/raw/master/survey/survey_2020.docx">Word Document</a></li>
+          </ul>
+        </div>
+      </div>
   </body>
   <footer>
         <!-- I got these buttons from simplesharebuttons.com -->
