gave each page index status in their own folder, removed ARIMA forecast

--- a/projects/index.html
+++ b/projects/index.html
@@ -7,10 +7,10 @@
       <img class="profilepic" alt="LinkedIn Profile Picture" src="https://media-exp1.licdn.com/dms/image/C5603AQHtfSzGxoMnoQ/profile-displayphoto-shrink_200_200/0?e=1599091200&v=beta&t=oHFMFikAG49re2xUJKE8XyWbZTqph8YZn2j4UKjAx-8">
     </div>
     <div class="topnav">
-      <a href="https://ibogley.github.io/website/index.html">Home</a>
-      <a href="https://ibogley.github.io/website/projects.html">Projects</a>
-      <a href="https://ibogley.github.io/website/documents.html">Documents</a>
-      <a href="https://ibogley.github.io/website/bio.html">Biography</a>
+      <a href="https://ibogley.github.io/website/">Home</a>
+      <a href="https://ibogley.github.io/website/projects/">Projects</a>
+      <a href="https://ibogley.github.io/website/documents/">Documents</a>
+      <a href="https://ibogley.github.io/website/bio/">Biography</a>
     </div>
   </head>
   <body>
@@ -37,7 +37,6 @@
             Below you'll find various projects I've completed in school, a professional setting, or my within my personal queries. As time goes on this list will grow in size and quality, and I look forward to adding more of my work to this page.
           </p>
           <ul>
-            <li>ARIMA Forecast <a href="https://github.com/ibogley/Code-Portfolio/blob/master/arima/arima_forecast.md">Github Document</a></li>
             <li>Case Study: Modern changes in the global retail market <a href="https://github.com/ibogley/Code-Portfolio/raw/master/case_study/case_study.docx">Word Document</a></li>
             <li>Election Animation <a href="https://github.com/ibogley/Code-Portfolio/blob/master/election/us_pres_prj_final.md">Github Document</a></li>
             <li>Employee Satisfaction Survey Work <a href="https://github.com/ibogley/Code-Portfolio/raw/master/survey/survey_2020.docx">Word Document</a></li>
