--- a/projects/index.html
+++ b/projects/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html>
-  <link rel="stylesheet" type="text/css" href="site.css">
+  <link rel="stylesheet" type="text/css" href="../site.css">
   <head>
     <title>Projects</title>
     <div class="topbanner">
