--- a/index.html
+++ b/index.html
@@ -37,8 +37,32 @@
             Hello, my name is Ian. I graduated from the University of Oregon in 2020 majoring in Economics while minoring in mathematics and business administration. As of september 2020, I will be pursuing a Master's in Applied Economics from the same institution. Check out my bio for more information on where I grew up, my previous personal exploits, etc.
           </p>
           <p>
-            I made this page with the intent of creating an online presence. This site is meant to be a representitive of my professional career and aspirations. Currently, I'm looking for an opportunity to work in data science.
+            I made this page with the intent of creating an online presence. This site is meant to be a representitive of my professional career and aspirations. Currently, I'm looking for an opportunity to work in data science, but my focus is always on ensuring that my presence results in tangible benefits for any organization I join.
           </p>
+          <h2>My Interests</h2>
+          <p>
+            The current labor market has made choosy beggars of us all, but I do have my sights on several areas for my future career.
+          </p>
+          <ul>
+            <li>
+              <strong>Local Politics</strong>: This pandemic and its conjunctive policing crisis have taught me a valuable lesson that I hope to carry until someone proves me wrong; Effective political leadership requires strategic thinking to navigate the intricacies of our society. After this example of negligence and incompetence on a national scale, I am curious about what it would take for me to become an effective representitive of my community and our democratic institutions.
+            </li>
+            <li>
+              <strong>Aerospace</strong>: The current developments being made by companies such as SpaceX are incredibly exciting. The opportunity to be the first generation to set foot on Mars would certainly be an incredible privilege for us, and I am interested in what I can do to get involved.
+            </li>
+          </ul>
+          <h2>My Previous Experience</h2>
+          <p>
+            While I haven't had much luck in the way of formal, distinguished work experience, I have made noteable contributions for organizations in my area.
+          </p>
+          <ul>
+            <li>
+              <strong>Survey Work</strong>: I approached a local career fair, where I gained the contact of a local ShelterCare HR Coordinator/Volunteer and Intern manager named Mathew Loyd. He mentioned that his local team had some employee satisfaction survey data that he was unsure of how to interpret. After providing me with the data, I was able to put together a report detailing how other, larger companies go about this process, as well as how it could be applied to their work environment to make a measurable change in quality of life. Check out this report under the Projects page.
+            </li>
+            <li>
+              <strong>Marketing</strong>: I am currently in the process of helping A Family for Every Child (AFFEC) isolate the effectiveness of e-marketing campaigns in the pursuit of more effectively encouraging the adoption of foster children. This involves working with the program Salesforce and the Apex programming language.
+            </li>
+          </ul>
         </div>
     </div>
   </body>
