changed homepage description

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           </p>
           <ul>
             <li>
-              <strong>Local Politics</strong>: This pandemic and its conjunctive policing crisis have taught me a valuable lesson that I hope to carry until someone proves me wrong; Effective political leadership requires strategic thinking to navigate the intricacies of our society. After this example of negligence and incompetence on a national scale, I am curious about what it would take for me to become an effective representitive of my community and our democratic institutions.
+              <strong>Local Politics</strong>: This pandemic and its conjunctive policing crisis have taught me a valuable lesson that I hope to carry until someone proves me wrong; Effective political leadership requires strategic thinking to navigate the intricacies of our society. I am curious about what it would take for me to become an effective representitive of my community and our democratic institutions.
             </li>
             <li>
               <strong>Aerospace</strong>: The current developments being made by companies such as SpaceX are incredibly exciting. The opportunity to be the first generation to set foot on Mars would certainly be an incredible privilege for us, and I am interested in what I can do to get involved.
