Modified homepage content

--- a/index.html
+++ b/index.html
@@ -39,19 +39,22 @@
           <p>
             I made this page with the intent of creating an online presence. This site is meant to be a representitive of my professional career and aspirations. Currently, I'm looking for an opportunity to work in data science, but my focus is always on ensuring that my presence results in tangible benefits for any organization I join.
           </p>
-          <h2>My Interests</h2>
+          <h2>My Industrial Interests</h2>
           <p>
             The current labor market has made choosy beggars of us all, but I do have my sights on several areas for my future career.
           </p>
           <ul>
             <li>
-              <strong>Local Politics</strong>: This pandemic and its conjunctive policing crisis have taught me a valuable lesson that I hope to carry until someone proves me wrong; Effective political leadership requires strategic thinking to navigate the intricacies of our society. I am curious about what it would take for me to become an effective representitive of my community and our democratic institutions.
-            </li>
-            <li>
               <strong>Aerospace</strong>: The current developments being made by companies such as SpaceX are incredibly exciting. The opportunity to be the first generation to set foot on Mars would certainly be an incredible privilege for us, and I am interested in what I can do to get involved.
             </li>
+            <li>
+              <strong>Athletics</strong>: I've spent my entire life watching the NFL. I enjoy watching players who are the master of their craft, and the ever evolving nature of fantasy football has provided a wealth of statistics that are ripe for parsing.
+            </li>
+            <li>
+              <strong>Local Politics</strong>: This pandemic and its conjunctive policing crisis have taught me a valuable lesson that I hope to carry until someone proves me wrong; Effective political leadership requires strategic thinking to navigate the intricacies of our society. I am curious about what it would take for me to become an effective representitive of my community and our democratic institutions.
+            </li>
           </ul>
-          <h2>My Previous Experience</h2>
+          <h2>My Previous Experience with Data</h2>
           <p>
             While I haven't had much luck in the way of formal, distinguished work experience, I have made noteable contributions for organizations in my area.
           </p>
@@ -60,7 +63,7 @@
               <strong>Survey Work</strong>: I approached a local career fair, where I gained the contact of a local ShelterCare HR Coordinator/Volunteer and Intern manager named Mathew Loyd. He mentioned that his local team had some employee satisfaction survey data that he was unsure of how to interpret. After providing me with the data, I was able to put together a report detailing how other, larger companies go about this process, as well as how it could be applied to their work environment to make a measurable change in quality of life. Check out this report under the Projects page.
             </li>
             <li>
-              <strong>Marketing</strong>: I am currently in the process of helping A Family for Every Child (AFFEC) isolate the effectiveness of e-marketing campaigns in the pursuit of more effectively encouraging the adoption of foster children. This involves working with the program Salesforce and the Apex programming language.
+              <strong>Marketing</strong>: I am currently in the process of helping A Family for Every Child (AFFEC) isolate the effectiveness of e-marketing campaigns in the pursuit of more effectively encouraging the adoption of foster children. This involves working with the program Salesforce and the Apex programming language. My expertise in data is applied to generating expiraments illuminating improvements we can make to the flyers we distribute.
             </li>
           </ul>
         </div>
@@ -95,7 +98,7 @@
       </div>
       <div class="button">
           <!-- Twitter -->
-          <a href="https://twitter.com/share?url=https://ibogley.github.io/website/index.html" target="_blank">
+          <a href="https://twitter.com/share?url=htt ps://ibogley.github.io/website/index.html" target="_blank">
               <img src="https://simplesharebuttons.com/images/somacro/twitter.png" alt="Twitter" />
           </a>
       </div>
