modified the homepage

--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
               <strong>Athletics</strong>: I've spent my entire life watching the NFL. I enjoy watching players who are the master of their craft, and the ever evolving nature of fantasy football has provided a wealth of statistics that are ripe for parsing.
             </li>
             <li>
+              <strong>E-Sports</strong>: I grew up hoping to be a professional gamer, specifically in the realm of Starcraft 2. I've also dabbled in other games such as Rainbow Six Siege, League of Legends, and Smite.
+            </li>
+            <li>
               <strong>Local Politics</strong>: This pandemic and its conjunctive policing crisis have taught me a valuable lesson that I hope to carry until someone proves me wrong; Effective political leadership requires strategic thinking to navigate the intricacies of our society. I am curious about what it would take for me to become an effective representitive of my community and our democratic institutions.
             </li>
           </ul>
