added the nfl project

--- a/projects/index.html
+++ b/projects/index.html
@@ -36,6 +36,7 @@
           <p>
             Below you'll find various projects I've completed in school, a professional setting, or my within my personal queries. As time goes on this list will grow in size and quality, and I look forward to adding more of my work to this page.
           </p>
+          <iframe src="https://ibogley.github.io/website/projects/nfl/position.pdf" ></iframe>
           <ul>
             <li>Case Study: Modern changes in the global retail market <a href="https://github.com/ibogley/Code-Portfolio/raw/master/case_study/case_study.docx">Word Document</a></li>
             <li>Election Animation <a href="https://github.com/ibogley/Code-Portfolio/blob/master/election/us_pres_prj_final.md">Github Document</a></li>
