--- a/projects/index.html
+++ b/projects/index.html
@@ -36,11 +36,12 @@
           <p>
             Below you'll find various projects I've completed in school, a professional setting, or my within my personal queries. As time goes on this list will grow in size and quality, and I look forward to adding more of my work to this page.
           </p>
+          <iframe src="https://ibogley.github.io/website/projects/survey/survey_2020.pdf"></iframe>
           <iframe src="https://ibogley.github.io/website/projects/nfl/position.pdf" ></iframe>
+          <iframe src="https://ibogley.github.io/website/projects/case_study/case_study.pdf"></iframe>
+          <h2>Other Projects</h2>
           <ul>
-            <li>Case Study: Modern changes in the global retail market <a href="https://github.com/ibogley/Code-Portfolio/raw/master/case_study/case_study.docx">Word Document</a></li>
             <li>Election Animation <a href="https://github.com/ibogley/Code-Portfolio/blob/master/election/us_pres_prj_final.md">Github Document</a></li>
-            <li>Employee Satisfaction Survey Work <a href="https://github.com/ibogley/Code-Portfolio/raw/master/survey/survey_2020.docx">Word Document</a></li>
           </ul>
         </div>
       </div>
