--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Homepage</title>
   <head>
     <div class="topbanner">
-      <img class="profilepic" alt="LinkedIn Profile Picture" src="https://media-exp1.licdn.com/dms/image/C5603AQHtfSzGxoMnoQ/profile-displayphoto-shrink_200_200/0?e=1599091200&v=beta&t=oHFMFikAG49re2xUJKE8XyWbZTqph8YZn2j4UKjAx-8">
+      <img class="profilepic" alt="LinkedIn Profile Picture" src="profilepic.jpg">
     </div>
     <div class="topnav">
       <a href="https://ibogley.github.io/website/">Home</a>
