gave iframe pdfs a border

--- a/documents/index.html
+++ b/documents/index.html
@@ -34,10 +34,10 @@
         </div>
         <div class="main">
           <h2 style="text-align:center">Resume</h2>
-          <iframe src="https://ibogley.github.io/website/documents/resume.pdf"></iframe>
+          <iframe class="pdf" src="https://ibogley.github.io/website/documents/resume.pdf"></iframe>
           <br>
           <h2 style="text-align:center">Transcript</h2>
-          <iframe src="https://ibogley.github.io/website/documents/transcript.pdf"></iframe>
+          <iframe class="pdf" src="https://ibogley.github.io/website/documents/transcript.pdf"></iframe>
         </div>
       </div>
   </body>
