--- a/projects/index.html
+++ b/projects/index.html
@@ -36,9 +36,10 @@
           <p>
             Below you'll find various projects I've completed in school, a professional setting, or my within my personal queries. As time goes on this list will grow in size and quality, and I look forward to adding more of my work to this page.
           </p>
-          <iframe class="pdf" src="https://ibogley.github.io/website/projects/survey/survey_2020.pdf"></iframe>
-          <iframe class="pdf" src="https://ibogley.github.io/website/projects/nfl/position.pdf" ></iframe>
-          <iframe class="pdf" src="https://ibogley.github.io/website/projects/case_study/case_study.pdf"></iframe>
+          <iframe class = "pdf" src="battleship/battleship.html"></iframe>
+          <iframe class="pdf" src="survey/survey_2020.pdf"></iframe>
+          <iframe class="pdf" src="nfl/position.pdf" ></iframe>
+          <iframe class="pdf" src="case_study/case_study.pdf"></iframe>
           <h2>Other Projects</h2>
           <ul>
             <li>Election Animation <a href="https://github.com/ibogley/Code-Portfolio/blob/master/election/us_pres_prj_final.md">Github Document</a></li>
