--- a/projects/index.html
+++ b/projects/index.html
@@ -37,6 +37,7 @@
             Below you'll find various projects I've completed in school, a professional setting, or my within my personal queries. As time goes on this list will grow in size and quality, and I look forward to adding more of my work to this page.
           </p>
           <iframe class="pdf" src="blog/blog_post_final.html"></iframe>
+          <iframe class="pdf" src="sf_women_statues/sf_monuments.pdf"></iframe>
           <iframe class="pdf" src="survey/survey_2020.pdf"></iframe>
           <iframe class="pdf" src="case_study/case_study.pdf"></iframe>
         </div>
