Redid content for the homepage.

--- a/index.html
+++ b/index.html
@@ -37,38 +37,34 @@
             Hello, my name is Ian. I graduated from the University of Oregon in 2020 majoring in Economics while minoring in mathematics and business administration. As of september 2020, I will be pursuing a Master's in Applied Economics from the same institution. Check out my bio for more information on where I grew up, my previous personal exploits, etc.
           </p>
           <p>
-            I made this page with the intent of creating an online presence. This site is meant to be a representitive of my professional career and aspirations. Currently, I'm looking for an opportunity to work in data science, but my focus is always on ensuring that my presence results in tangible benefits for any organization I join.
+            I made this page with the intent of creating an online presence. This site is meant to be a representitive of my professional career and aspirations. Currently, I'm looking for an opportunity to work in data science or public policy, but my focus is always on ensuring that my presence results in tangible benefits for any organization I join.
           </p>
-          <h2>My Industrial Interests</h2>
-          <p>
-            The current labor market has made choosy beggars of us all, but I do have my sights on several areas for my future career.
-          </p>
-          <ul>
-            <li>
-              <strong>Aerospace</strong>: The current developments being made by companies such as SpaceX are incredibly exciting. The opportunity to be the first generation to set foot on Mars would certainly be an incredible privilege for us, and I am interested in what I can do to get involved.
-            </li>
-            <li>
-              <strong>Athletics</strong>: I've spent my entire life watching the NFL. I enjoy watching players who are the master of their craft, and the ever evolving nature of fantasy football has provided a wealth of statistics that are ripe for parsing.
-            </li>
-            <li>
-              <strong>E-Sports</strong>: I grew up hoping to be a professional gamer, specifically in the realm of Starcraft 2. I've also dabbled in other games such as Rainbow Six Siege, League of Legends, and Smite.
-            </li>
-            <li>
-              <strong>Local Politics</strong>: This pandemic and its conjunctive policing crisis have taught me a valuable lesson that I hope to carry until someone proves me wrong; Effective political leadership requires strategic thinking to navigate the intricacies of our society. I am curious about what it would take for me to become an effective representitive of my community and our democratic institutions.
-            </li>
-          </ul>
           <h2>My Previous Experience with Data</h2>
-          <p>
-            While I haven't had much luck in the way of formal, distinguished work experience, I have made noteable contributions for organizations in my area.
-          </p>
           <ul>
             <li>
-              <strong>Survey Work</strong>: I approached a local career fair, where I gained the contact of a local ShelterCare HR Coordinator/Volunteer and Intern manager named Mathew Loyd. He mentioned that his local team had some employee satisfaction survey data that he was unsure of how to interpret. After providing me with the data, I was able to put together a report detailing how other, larger companies go about this process, as well as how it could be applied to their work environment to make a measurable change in quality of life. Check out this report under the Projects page.
+              <strong>Surveys</strong>: I gained the contact of a local ShelterCare HR Coordinator/Volunteer and Intern manager named Mathew Loyd. He mentioned that his local team had some employee satisfaction survey data that he was unsure of how to interpret. After providing me with the data, I was able to put together a report detailing how other companies go about this process, as well as how it could be applied to their work environment to make a measurable change in quality of life and productivity. You can find this report on the <a href="https://ibogley.github.io/website/documents/">Documents</a> page.
             </li>
             <li>
-              <strong>Marketing</strong>: I am currently in the process of helping A Family for Every Child (AFFEC) isolate the effectiveness of e-marketing campaigns in the pursuit of more effectively encouraging the adoption of foster children. This involves working with the program Salesforce and the Apex programming language. My expertise in data is applied to generating expiraments illuminating improvements we can make to the flyers we distribute.
+              <strong>Regression Analysis</strong>: The economics program here at the University of Oregon strongly emphasises econometrics. I had the privilege of learning varying levels of the sub-section each with a heavy dose of R programming under <a href="https://www.lucianaetcheverry.com/">Luciana Etcheverry</a>, <a href="https://sites.google.com/site/jonathanmvdavis/">Jon Davis</a>, and <a href="https://github.com/CMLennon">Connor Lennon</a>
+            </li>
+            <li>
+              <strong>Forecasting</strong>: I had the opportunity to learn forecasting techniques from <a href="https://pages.uoregon.edu/duy/">Tim Duy</a>, a professor here at the University of Oregon who runs a blog called <a href="https://blogs.uoregon.edu/timduyfedwatch/">Fed watch</a>. Within the course, labeled in my transcript as "Economic Forecasting", I was able to learn about various methods for predicting the future behavior of variables based on previous information.
+            </li>
+            <li>
+              <strong>Exploratory Data Analysis</strong>: I have completed this category of analysis multiple times outside of the classroom. Check out my work on women's representation in San Fransisco monuments for an example.
+            </li>
+            <li>
+              <strong>Big Data</strong>: I had the opportunity to take a course centering on big data under <a href="">Grant McDermot</a>, which taught much about how to translate the skills we learn on smaller datasets to larger ones. It was here that I learned to use both Google BigQuery and Apache Spark.
+            </li>
+            <li>
+              <strong>Languages/Tools</strong>: R, Python, and SQL; Google BigQuery, Apache Spark, and Github.
             </li>
           </ul>
+          <h2>My Previous Experience in Macroeconomics</h2>
+          <li>
+            <strong>International</strong>: Here at the University of Oregon, <a href="https://sites.google.com/view/shankhachakraborty">Shanka Chakrabroty</a> is known as a fantastic storyteller within the realm of economics. I had the privilege of taking two of his classes so far, each dealing with international macroeconomics. The first was an undergradaute level course detailing the basics of global currency exchanges and trade balances under the title of "International Finance". Secondly was a graduate level course on developing nations. Both have contributed a great deal to my understanding of global markets and geopolitics in general.
+          </li>
+            <strong>General</strong>: It was a great experience learning graduate level macroeconomics from <a href="">Bruce McGough</a>. During the course I took from him, we covered various macroeconomic models and how to utilize them towards pragmatic policy insights. From Adam Smith and classical economics to the Keynsian framework, the Neoclassical synthesis and Rational expecation models, my time learning from him was profound and enlightening.
         </div>
     </div>
   </body>
