added missing links

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <strong>Exploratory Data Analysis</strong>: I have completed this category of analysis multiple times outside of the classroom. Check out my work on women's representation in San Fransisco monuments for an example.
             </li>
             <li>
-              <strong>Big Data</strong>: I had the opportunity to take a course centering on big data under <a href="">Grant McDermot</a>, which taught much about how to translate the skills we learn on smaller datasets to larger ones. It was here that I learned to use both Google BigQuery and Apache Spark.
+              <strong>Big Data</strong>: I had the opportunity to take a course centering on big data under <a href="https://grantmcdermott.com/">Grant McDermot</a>, which taught much about how to translate the skills we learn on smaller datasets to larger ones. It was here that I learned to use both Google BigQuery and Apache Spark.
             </li>
             <li>
               <strong>Languages/Tools</strong>: R, Python, and SQL; Google BigQuery, Apache Spark, and Github.
@@ -64,7 +64,7 @@
           <li>
             <strong>International</strong>: Here at the University of Oregon, <a href="https://sites.google.com/view/shankhachakraborty">Shanka Chakrabroty</a> is known as a fantastic storyteller within the realm of economics. I had the privilege of taking two of his classes so far, each dealing with international macroeconomics. The first was an undergradaute level course detailing the basics of global currency exchanges and trade balances under the title of "International Finance". Secondly was a graduate level course on developing nations. Both have contributed a great deal to my understanding of global markets and geopolitics in general.
           </li>
-            <strong>General</strong>: It was a great experience learning graduate level macroeconomics from <a href="">Bruce McGough</a>. During the course I took from him, we covered various macroeconomic models and how to utilize them towards pragmatic policy insights. From Adam Smith and classical economics to the Keynsian framework, the Neoclassical synthesis and Rational expecation models, my time learning from him was profound and enlightening.
+            <strong>General</strong>: It was a great experience learning graduate level macroeconomics from <a href="https://brucemcgough.blog/">Bruce McGough</a>. During the course I took from him, we covered various macroeconomic models and how to utilize them towards pragmatic policy insights. From Adam Smith and classical economics to the Keynsian framework, the Neoclassical synthesis and Rational expecation models, my time learning from him was profound and enlightening.
         </div>
     </div>
   </body>
